@@ -1,6 +1,7 @@
 Debug                     False
 # ------------------------------------------ #
-GRL                       $ROOTCOREBIN/data/xAODAnaHelpers/data12_8TeV.periodAllYear_DetStatus-v61-pro14-02_DQDefects-00-01-00_PHYS_StandardGRL_All_Good.xml
+ApplyGRL                  True
+GRL                       $ROOTCOREBIN/data/xAODAnaHelpers/data15_13TeV.periodA+B1_DetStatus-v62-pro18_DQDefects-00-01-02_PHYS_StandardGRL_All_Good.xml
 # ------------------------------------------ #
 DoPileupReweighting	  False
 # ------------------------------------------ #
