@@ -27,4 +27,31 @@ mc15_13TeV.*.PowhegPythia8EvtGen_AZNLOCTEQ6L1_Zmumu.merge.DAOD_HIGG8D1.*p2363/
 # ---------------------------------------
 # DAOD HIGG8D1 - AtlasDerivation,20.1.5.1
 # ---------------------------------------
-data15_13TeV.*.physics_Main.merge.DAOD_HIGG8D1.*p2361/
+# ~~~~ period A1,A2,A3 ~~~~ #
+data15_13TeV.00267148.physics_Main.merge.DAOD_HIGG8D1.f594_m1441_p2361/
+data15_13TeV.00267162.physics_Main.merge.DAOD_HIGG8D1.f594_m1441_p2361/
+data15_13TeV.00267167.physics_Main.merge.DAOD_HIGG8D1.f594_m1441_p2361/
+data15_13TeV.00267152.physics_Main.merge.DAOD_HIGG8D1.f594_m1435_p2361/
+data15_13TeV.00267073.physics_Main.merge.DAOD_HIGG8D1.f594_m1435_p2361/
+data15_13TeV.00266904.physics_Main.merge.DAOD_HIGG8D1.f594_m1435_p2361/
+data15_13TeV.00266919.physics_Main.merge.DAOD_HIGG8D1.f594_m1435_p2361/
+# ~~~~ period B1 ~~~~ #
+data15_13TeV.00267599.physics_Main.merge.DAOD_HIGG8D1.f597_m1441_p2361/
+data15_13TeV.00267358.physics_Main.merge.DAOD_HIGG8D1.f597_m1441_p2361/
+data15_13TeV.00267385.physics_Main.merge.DAOD_HIGG8D1.f597_m1441_p2361/
+data15_13TeV.00267360.physics_Main.merge.DAOD_HIGG8D1.f597_m1441_p2361/
+data15_13TeV.00267367.physics_Main.merge.DAOD_HIGG8D1.f597_m1441_p2361/
+data15_13TeV.00267359.physics_Main.merge.DAOD_HIGG8D1.f597_m1441_p2361/
+
+
+
+
+
+
+
+
+
+
+
+
+
