@@ -1,3 +1,7 @@
+2015-22-06 Marco Milesi <Marco.Milesi@cern.ch>
+	    * Fix bug in HTopMultilepEventSelector: cutflow must be filled in EL::finalize()
+	      (this prevent s code from crashing when running on zero-event files)
+	    * Tagging as 00-01-02
 2015-19-06 Marco Milesi <Marco.Milesi@cern.ch>
 	    * Apply all pre-recommendations for early Run2 
             * Add MET rebuilder in algo list
